2021-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLReference): Fix memory leak when parser node is
        null. Addresses oss-fuzz 32713 "graphicsmagick:coder_MSL_fuzzer:
        Direct-leak in xmlNewReference".

2021-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (ReadOnePNGImage): Avoid use of null
        ping_trans_color.  Fixes oss-fuzz 32666
        "graphicsmagick:coder_MNG_fuzzer: Null-dereference READ in
        ReadOnePNGImage".

2021-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (WriteMSLImage): Add OpenBlob()/CloseBlob() which
        seems necessary to avoid memory leak in ImageToBlob().  Hopefully
        will fix oss-fuzz 32575 "graphicsmagick:coder_MSL_fuzzer:
        Direct-leak in MagickMalloc".

2021-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (RegisterJP2Image): Report JasPer library version.

        * coders/msl.c (ProcessMSLScript): Free msl_image upon reader
        failure.  Should fix oss-fuzz 32479
        "graphicsmagick:coder_MSL_fuzzer: Indirect-leak in MagickMalloc".

2021-03-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * PerlMagick/Makefile.am (check-perl): Nullify the check-perl
        target when PerlMagick is enabled and shared libraries are used.
        This is because a dynamic GraphicsMagick needs to be formally
        installed before PerlMagick can be tested.

        * coders/jp2.c (ReadJP2Image): Support both old and new ways to
        determine if JasPer codec support is available.

        * coders/msl.c (ProcessMSLScript): Another attempt to properly fix
        oss-fuzz 32263 "graphicsmagick:coder_MSL_fuzzer:
        Heap-use-after-free in ProcessMSLScript" without causing new
        problems.

2021-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (ProcessMSLScript): Fix oss-fuzz 32263