@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210402"
-#define public MagickPackageReleaseDate "snapshot-20210402"
+#define public MagickPackageVersionAddendum ".020210406"
+#define public MagickPackageReleaseDate "snapshot-20210406"
