@@ -35,6 +35,11 @@
 <div class="document">
 
 
+<p>2021-04-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* coders/svg.c (GetStyleTokens): Limit the number of style tokens.
+Addresses oss-fuzz 32921 &quot;graphicsmagick:coder_SVG_fuzzer:
+Out-of-memory in coder_SVG_fuzzer&quot;.</blockquote>
 <p>2021-04-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 * coders/msl.c (MSLReference): Fix memory leak when parser node is
