@@ -1,3 +1,9 @@
+2021-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/svg.c (GetStyleTokens): Limit the number of style tokens.
+        Addresses oss-fuzz 32921 "graphicsmagick:coder_SVG_fuzzer:
+        Out-of-memory in coder_SVG_fuzzer".
+
 2021-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/msl.c (MSLReference): Fix memory leak when parser node is
